<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!--com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/bugs_view"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/bugs"
            app:lottie_loop="true"/-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/bugs_view"
            android:src="@drawable/bad_crash"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bugs_view"
            android:layout_margin="16dp"
            android:id="@+id/crash_tips"
            android:text="@string/crash_tips_text"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_margin="16dp"
            android:layout_below="@id/crash_tips"
            android:id="@+id/scroll_log"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textIsSelectable="true"
                android:id="@+id/crash_reason_text" />

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scroll_log"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="@string/crash_btn_exit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exit"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="@string/crash_btn_restart" />


    </RelativeLayout>


</RelativeLayout>